Fixed alignment of two right divs

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border-style: solid;
     border-radius: 25px;
     border-width: 5px;
-    /*width:100%;*/
+    width:100%;
 }
 
 h2 {
